# lattice-boltzmann-play

./: Cargo.nix  Cargo.toml  README.md  flake.nix
src/: config.rs  framebuffer.rs  lattice.rs  main.rs  physics.rs  test_particle.rs  visual.rs
src/physics/: mod.rs  stream.rs
